--- a/public/H5P/3_1_2AllgemeineRegeln.html
+++ b/public/H5P/3_1_2AllgemeineRegeln.html
@@ -2,6 +2,7 @@
 <!doctype html>
     <html class="h5p-iframe">
     <head>
+        <titel>ScienceWrite</titel> 
 <script src="../scripts/completionEventScript.js"></script>
    <script src = "../scripts/workadventure-iframe-fixed.js"></script> 
                   
